--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radiestesia Terapêutica</title>
+    <title>Fichas de Atendimento</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -93,20 +92,20 @@
 </head>
 
 <body>
-    <h1>Radiestesia Terapêutica</h1>
+    <h1>Fichas de Atendimento</h1>
 
     <div class="cards-container">
         <div class="card">
-            <a href="https://ravellsl.github.io/radiestesia-doc-01/" target="_blank">Ficha de Avaliação de Harmonização Energética</a>
+            <a href="https://ravellsl.github.io/radiestesia-doc-01/" target="_blank">Avaliação de Harmonização Energética</a>
         </div>
         <div class="card">
-            <a href="https://ravellsl.github.io/radiestesia-doc-02/" target="_blank">Ficha de Harmonização Energética</a>
+            <a href="https://ravellsl.github.io/radiestesia-doc-02/" target="_blank">Harmonização Energética</a>
         </div>
         <div class="card">
-            <a href="https://ravellsl.github.io/radiestesia-doc-03/" target="_blank">Ficha de Aferição e Harmonização Energética</a>
+            <a href="https://ravellsl.github.io/radiestesia-doc-03/" target="_blank">Aferição e Harmonização Energética</a>
         </div>
         <div class="card">
-            <a href="https://ravellsl.github.io/https-ravellsl.github.io-radiestesia-doc-04/" target="_blank">Ficha de Aferição de Saúde Física</a>
+            <a href="https://ravellsl.github.io/https-ravellsl.github.io-radiestesia-doc-04/" target="_blank">Aferição de Saúde Física</a>
         </div>
     </div>
 </body>
