--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             text-align: center;
             margin-bottom: 30px;
             font-size: 2.5em;
-            color: #333;
+            color: #4CAF50; /* Cor verde */
         }
 
         .cards-container {
@@ -37,7 +37,7 @@
             background-color: #fff;
             border: 2px solid #ccc;
             border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); /* Sombreamento intensificado */
             width: 300px;
             height: 180px;
             display: flex;
